<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TravelDealActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium_margin">


    <EditText
        android:id="@+id/title_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/medium_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:hint="@string/deal_title_txt"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/price_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/medium_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_et"
        android:layout_marginTop="@dimen/medium_margin"
        android:inputType="numberDecimal"
        android:hint="@string/price_numbers_only_txt"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/description_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/medium_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_et"
        android:layout_marginTop="@dimen/medium_margin"
        android:inputType="textLongMessage"
        android:hint="@string/description_txt"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/upload_img_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/medium_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_et"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/upload_image_txt"
        android:textSize="@dimen/medium_txt"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>


    <ImageView
        android:id="@+id/deal_img_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/medium_clickable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_img_btn"
        android:layout_margin="@dimen/medium_margin"
        android:contentDescription="@string/app_images"/>


</androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>
